2009-10-17  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php: set default action in alert combo box when
	you make a new alert.

2009-10-16  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes.

	* godmode/agentes/planned_downtime*.php: Improving integrity of 
	appareance in title.

	* Changelog: Correct some dates.

2009-10-16  Sancho Lerena <slerena@artica.es>

	* include/functions_db.php: Updated description for ACL flags.

2009-10-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js,
	godmode/agentes/module_manager_editor.php: add the type as parse in the
	module data in the local component, in the ajax (request in php and load
	in js).

2009-10-14  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fix, show only monitor in unknow
	status when you click in the "Unknown monitors" in tactical agent view.

2009-10-14  Miguel de Dios  <miguel.dedios@artica.es>

	* general/ui/agents_list.php: remove the pass-by-reference in the two calls
	to "render_agent_field" because it are not necesary that in the function
	"render_agent_field" there aren't any change in the $agent param.

	* include/styles/pandora.css: fix minor bug that the path to arrow.png was
	wrong.

2009-10-13  Sancho Lerena <slerena@artica.es>

	* operation/events/events.php: Replaced old icon (red cross) by a 
	white tick.

	* images/tick_off.png: White tick.

	* include/config_process.php: Ooopps, this is RC1 !

	Upps, Tuesday #13, bad day for a last commit before launch RC1 ! :-S
	
	* general/logon_ok.php: Fixed ugly format of table showing last activity 
	(has a too wide table width).
	
	* godmode/admin_access_logs.php: Removed that crappy div fashion code and
	replaced by old and reliable table-based-code :-) to fix the mess with the
	pagination.
	
	* godmode/agentes/configurar_agente.php: fixed problem with postprocess 